Fiixed val_loss in preprocessing stage, trained all models

--- a/notebooks/02-preprocessing.ipynb
+++ b/notebooks/02-preprocessing.ipynb
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "85d7b189",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
        "36            0.43  20380357        1.0             0.18           A  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "27adbb61",
    "metadata": {},
    "outputs": [
@@ -348,7 +348,7 @@
        "2021-04-21 03:00:00+00:00          111     3  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "94c991d2",
    "metadata": {},
    "outputs": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "06ab654a",
    "metadata": {},
    "outputs": [
@@ -466,6 +466,59 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b9d390d9",
+   "metadata": {},
+   "source": [
+    "Validate and Clean Scaled Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ef4efcad",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING: Found and removed 1 rows with NaN/inf values (0.00% of data).\n",
+      "Data validation successful. No NaN/inf values found.\n",
+      "Data validation successful. No NaN/inf values found.\n",
+      "Data validation successful. No NaN/inf values found.\n"
+     ]
+    }
+   ],
+   "source": [
+    "def clean_scaled_data(scaled_data, original_columns):\n",
+    "    \"\"\"\n",
+    "    Finds and removes rows containing NaN or infinity from scaled data.\n",
+    "    \"\"\"\n",
+    "    df = pd.DataFrame(scaled_data, columns=original_columns)\n",
+    "    initial_rows = len(df)\n",
+    "    \n",
+    "    # Check for NaN or infinity\n",
+    "    invalid_rows_mask = df.isin([np.nan, np.inf, -np.inf]).any(axis=1)\n",
+    "    \n",
+    "    if invalid_rows_mask.any():\n",
+    "        num_invalid = invalid_rows_mask.sum()\n",
+    "        print(f\"WARNING: Found and removed {num_invalid} rows with NaN/inf values ({((num_invalid/initial_rows)*100):.2f}% of data).\")\n",
+    "        # Keep only the valid rows\n",
+    "        cleaned_data = scaled_data[~invalid_rows_mask]\n",
+    "        return cleaned_data\n",
+    "    else:\n",
+    "        print(\"Data validation successful. No NaN/inf values found.\")\n",
+    "        return scaled_data\n",
+    "\n",
+    "# Clean the data for each set\n",
+    "train_scaled1 = clean_scaled_data(train_scaled1, train_df1.columns)\n",
+    "test_scaled1 = clean_scaled_data(test_scaled1, test_df1.columns)\n",
+    "train_scaled2 = clean_scaled_data(train_scaled2, train_df2.columns)\n",
+    "test_scaled2 = clean_scaled_data(test_scaled2, test_df2.columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cb6cd862",
    "metadata": {},
    "source": [
@@ -482,16 +535,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sequence creation complete. Example shape for Station 1 Training X: (235245, 24, 6)\n",
-      "This means: (235245 samples, 24 timesteps/hours, 6 features)\n"
+      "Sequence creation complete. Example shape for Station 1 Training X: (235244, 24, 6)\n",
+      "This means: (235244 samples, 24 timesteps/hours, 6 features)\n"
      ]
     }
    ],
    "source": [
-    "def create_sequences(data, lookback, feature_cols, target_col_index):\n",
+    "def create_sequences(data, lookback, target_col_index):\n",
     "    \"\"\"Reshapes data into sequences for time series forecasting.\"\"\"\n",
     "    X, y = [], []\n",
-    "    num_features = data.shape[1]\n",
     "    \n",
     "    for i in range(len(data) - lookback):\n",
     "        # The input sequence is the 'lookback' window of all features\n",
@@ -506,15 +558,15 @@
     "LOOKBACK = 24 \n",
     "\n",
     "# Find the index of our 'error' column (it's the first column, so index = 0)\n",
-    "target_col_idx = station1_featured.columns.get_loc('error') \n",
+    "target_col_idx = train_df1.columns.get_loc('error') \n",
     "\n",
     "# Create sequences for Station 1\n",
-    "X_train1, y_train1 = create_sequences(train_scaled1, LOOKBACK, station1_featured.columns, target_col_idx)\n",
-    "X_test1, y_test1 = create_sequences(test_scaled1, LOOKBACK, station1_featured.columns, target_col_idx)\n",
+    "X_train1, y_train1 = create_sequences(train_scaled1, LOOKBACK, target_col_idx)\n",
+    "X_test1, y_test1 = create_sequences(test_scaled1, LOOKBACK, target_col_idx)\n",
     "\n",
     "# Create sequences for Station 2\n",
-    "X_train2, y_train2 = create_sequences(train_scaled2, LOOKBACK, station2_featured.columns, target_col_idx)\n",
-    "X_test2, y_test2 = create_sequences(test_scaled2, LOOKBACK, station2_featured.columns, target_col_idx)\n",
+    "X_train2, y_train2 = create_sequences(train_scaled2, LOOKBACK, target_col_idx)\n",
+    "X_test2, y_test2 = create_sequences(test_scaled2, LOOKBACK, target_col_idx)\n",
     "\n",
     "print(f\"Sequence creation complete. Example shape for Station 1 Training X: {X_train1.shape}\")\n",
     "print(f\"This means: ({X_train1.shape[0]} samples, {X_train1.shape[1]} timesteps/hours, {X_train1.shape[2]} features)\")"
